-
Bug
-
Resolution: Fixed
-
P2
-
9
-
b06
-
Verified
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8045372 | 8u25 | Vladimir Ivanov | P2 | Resolved | Fixed | b01 |
JDK-8038743 | 8u20 | Vladimir Ivanov | P2 | Closed | Fixed | b08 |
JDK-8053478 | emb-8u26 | Vladimir Ivanov | P2 | Resolved | Fixed | b17 |
I get this with a lot of different jtreg tests. One example is:
java/util/stream/test/org/openjdk/tests/java/util/stream/TeeOpTest.java
on solaris x64 with -Xcomp
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/space/rw140007/jdk9-repo/hotspot/src/share/vm/opto/memnode.cpp:1659), pid=10593, tid=16
# assert(adr->is_AddP() && adr->in(AddPNode::Offset)->is_Con()) failed: offset is a constant
#
I'm using an old JDK8 build (b119) with latest hotspot from hotspot-comp.
java/util/stream/test/org/openjdk/tests/java/util/stream/TeeOpTest.java
on solaris x64 with -Xcomp
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/space/rw140007/jdk9-repo/hotspot/src/share/vm/opto/memnode.cpp:1659), pid=10593, tid=16
# assert(adr->is_AddP() && adr->in(AddPNode::Offset)->is_Con()) failed: offset is a constant
#
I'm using an old JDK8 build (b119) with latest hotspot from hotspot-comp.
- backported by
-
JDK-8045372 "assert(adr->is_AddP() && adr->in(AddPNode::Offset)->is_Con()) failed: offset is a constant" with FoldStableValues on
-
- Resolved
-
-
JDK-8053478 "assert(adr->is_AddP() && adr->in(AddPNode::Offset)->is_Con()) failed: offset is a constant" with FoldStableValues on
-
- Resolved
-
-
JDK-8038743 "assert(adr->is_AddP() && adr->in(AddPNode::Offset)->is_Con()) failed: offset is a constant" with FoldStableValues on
-
- Closed
-